# KMeansBasedSegmentor

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  SoftwareEngineering.md
app/: CMakeLists.txt
app/src/: main.cpp
include/dataLibrary/: dataContainer.h  element.h  imageContainer.h  pixel.h
include/generatorLibrary/: dataGenerator.h  linCongNG.h  mersTwistNG.h  mswSeqNG.h  prng.h  xorshiftNG.h
include/segmentorLibrary/: cluster.h  clusterElement.h  clusterPixel.h  segmentor.h  segmentorElement.h  segmentorPixel.h
softeng.d/: Product_Backlog_Kmeans.xlsx
src/: CMakeLists.txt
src/dataLibrary/: dataContainer.cpp  element.cpp  imageContainer.cpp  pixel.cpp
src/generatorLibrary/: dataGenerator.cpp  linCongNG.cpp  mersTwistNG.cpp  mswSeqNG.cpp  prng.cpp  xorshiftNG.cpp
src/segmentorLibrary/: cluster.cpp  clusterElement.cpp  clusterPixel.cpp  segmentor.cpp  segmentorElement.cpp  segmentorPixel.cpp
test/: CMakeLists.txt
test/dataLibrary/: CMakeLists.txt  testAtomic.cpp  testContainer.cpp
test/generatorLibrary/: CMakeLists.txt  testGenerateMethod.cpp  testGenerator.cpp  testPrNG.cpp
test/segmentorLibrary/: CMakeLists.txt  testCluster.cpp  testSegmentor.cpp  testSegmentorPixel.cpp
